Fixed the data for the site.

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,12 +4,5 @@
   started: 2002-09-01
   finished: 2007-07-01
   description:
-  - Graduated with honours (GPA 99%)
-
-- title: "Technical Translation, Specialist’s degree"
-  uni: "Penza State University"
-  location: "Penza, Russia"
-  started: 2002-09-01
-  finished: 2007-07-01
-  description:
-  - Graduated with honours (GPA 100%)
+  - Graduated with honours
+  - Attained GPA 99%
