--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,7 +2,10 @@
   type: Portal
   year: 2013 &mdash; 2014
   anchor: studiportal
-  desc: <p>Missing description</p>
+  desc: <p>STUDITEMPS GmbH is a recruitment agency providing temporary work
+    for students. All students employed by STUDITEMPS have an access to
+    the portal where they can
+    add and edit their personal data and working hours.</p>
   company: Studitemps GmbH
   technologies:
   - Design and UX
@@ -22,11 +25,10 @@
   type: ERP system
   year: 2012 &mdash; 2014
   anchor: kiss
-  desc: <p>Missing description! KISS is a software application that incorporates all facets of the
+  desc: <p>KISS is STUDITEMPS's ERP system that incorporates all facets of the
     business, and automate and facilitate the flow of data between critical
-    back-office functions, which may include financing, distribution,
-    accounting, inventory management, sales, marketing, planning, human
-    resources, manufacturing, and other operating units.</p>
+    back-office functions, which include sales, human resources, planning,
+    marketing, accounting, and other operating units.</p>
   company: Studitemps GmbH
   technologies:
   - Design and UX
