Fixed the indent in jobs.yml.

--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -3,8 +3,8 @@
   location: Sydney, Australia
   started: 2014-05-01
   responsibilites:
-  - Develop the front-end of Ruby on Rails projects with HTML5, CSS/SASS,
-  JavaScript/CoffeeScript, jQuery, and Ajax
+  - Develop the front-end of a Ruby on Rails project with HTML5, CSS/SASS,
+    JavaScript/CoffeeScript, jQuery, and Ajax
 
 - title: Front-end and Django developer
   company: <a href="http://studitemps.de/">STUDITEMPS GmbH</a>
